add endpoints to post score and fetch leaderboard

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 PORT=3000
+
+MONGO_URI=mongodb+srv://shaneestrellanes:vuhkSEiLg8NK2UYj@timerrush.7bwvpb7.mongodb.net/?retryWrites=true&w=majority&appName=TimerRush
+
